adicionando configuração do build e corrigindo configurações do código
