# swagger.json
@@ -24,6 +24,34 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "tags": ["Movie"],
+                "summary": "Criar um filme",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/MovieInput"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Filme criado com sucesso"
+                    },
+                    "400": {
+                        "description": "Dados inválidos"
+                    },
+                    "409": {
+                        "description": "Filme com o mesmo título já existe"
+                    },
+                    "500": {
+                        "description": "Erro ao criar o filme"
+                    }
+                }
             }
         },
         "/movies/{id}": {
@@ -46,7 +74,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/MovieInput"
+                                "$ref": "#/components/schemas/MovieUpdateInput"
                             }
                         }
                     }
@@ -89,9 +117,8 @@
                     }
                 }
             }
-
         },
-        "/movies{genreName}": {
+        "/movies/genre/{genreName}": {
             "get": {
                 "tags": ["Movie"],
                 "summary": "Obter filmes por gênero",
@@ -177,12 +204,13 @@
                         "type": "integer",
                         "description": "Quantidade de Oscars ganhos pelo filme"
                     },
-                    "releaseDate": {
+                    "release_date": {
                         "type": "string",
                         "format": "date",
                         "description": "Data de lançamento do filme"
                     }
-                }
+                },
+                "additionalProperties": false
             },
             "MovieInput": {
                 "type": "object",
@@ -191,7 +219,7 @@
                     "genre_id",
                     "language_id",
                     "oscar_count",
-                    "releaseDate"
+                    "release_date"
                 ],
                 "properties": {
                     "title": {
@@ -210,12 +238,38 @@
                         "type": "integer",
                         "description": "Quantidade de Oscars ganhos pelo filme"
                     },
-                    "releaseDate": {
+                    "release_date": {
                         "type": "string",
                         "format": "date",
                         "description": "Data de lançamento do filme"
                     }
                 }
+            },
+            "MovieUpdateInput": {
+                "type": "object",
+                "properties": {
+                    "title": {
+                        "type": "string",
+                        "maxLength": 100
+                    },
+                    "genre_id": {
+                        "type": "integer",
+                        "minimum": 1
+                    },
+                    "language_id": {
+                        "type": "integer",
+                        "minimum": 1
+                    },
+                    "oscar_count": {
+                        "type": "integer",
+                        "minimum": 0
+                    },
+                    "release_date": {
+                        "type": "string",
+                        "format": "date"
+                    }
+                },
+                "additionalProperties": false
             }
         }
     }
